# tt-rag

./: .env.example  docker-compose.yml  main.py  pyproject.toml
agents_and_graphs/: agentic_rag.py  api.py  graph.py  main.py
src/eval/: ds.json  ds_small.json  main.py
src/inference/: cli.py  retrieval.py
src/ingestion/: chunk.py  configs.py  db.py  embed.py  pipeline.py  schema.sql
src/ingestion/parsers/: _base.py  meta_parser.py  pymupdf_parser.py  python_docx_parser.py
src/ingestion/parsers/test_files/: 1pagebreak.docx  tester.py
