[project]
name = "codespaces-blank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=2.5.0",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "python-docx>=1.2.0",
    "python-dotenv[cli]>=1.2.2",
]
