[project]
name = "codespaces-blank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chonkie>=1.6.8",
    "click>=8.4.2",
    "datasets>=5.0.0",
    "dotenv>=0.9.9",
    "langchain-community==0.4.1",
    "numpy>=2.5.0",
    "openai>=2.44.0",
    "psycopg2-binary>=2.9.12",
    "psycopg2[binary]>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-ai>=2.2.0",
    "pydantic-ai-slim[openai]>=2.2.0",
    "pymupdf>=1.28.0",
    "python-docx>=1.2.0",
    "python-dotenv[cli]>=1.2.2",
    "ragas>=0.4.3",
    "rapidfuzz>=3.14.5",
]
